<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sensor Recorder</string>
    <string name="menu_settings">Settings</string>
    
    <string name="activity0_AvailableSensors">Available Sensors</string>
    <string name="activity0_Accelerometer">Accelerometer</string>
    <string name="activity0_Gyroscope">Gyroscope</string>
    <string name="activity0_MagneticField">Magnetic Field</string>
    <string name="activity0_StartRecording">Start Recording</string>

    <dimen name="activity0_buttonMargin">50dp</dimen>
    <dimen name="activity0_sectionPadding">3sp</dimen>

    <string name="activity0_FileNameHint">Enter a name for the record</string>
    <string name="activity0_FileNameSection">File Name</string>
    <string name="activity0_startButton">Record</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_recording">Recording</string>
    <string name="activity1_axisX">X:</string><string name="activity1_axisY">Y:</string><string name="activity1_axisZ">Z:</string>
    <string name="activity1_stopRecording">Stop Recording</string>

</resources>